--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,10 @@ input[type='range']::-webkit-slider-thumb {
     box-shadow: -80px 0 0 80px #43e5f7;
 }
 
+input [type='range']:hover {
+    cursor: pointer;
+}
+
 input[type="range"]::-moz-range-progress {
     background-color: #59EDC9;
     height: 8px;
