--- a/css/index.css
+++ b/css/index.css
@@ -26,10 +26,6 @@ input[type='range']::-webkit-slider-thumb {
     box-shadow: -80px 0 0 80px #43e5f7;
 }
 
-input [type='range']:hover {
-    cursor: pointer;
-}
-
 input:hover {
     cursor: pointer;
 }
@@ -224,24 +220,17 @@ select option {
 
 
 
+
+/** HELPER CLASSES */
+
+.disabled {
+    opacity: 0.2;
+}
+
+.coming-soon {
+    color: rgba(128, 128, 128, 0.452);
+    opacity: 0.2;
+    border-radius: 3px;
+}
+
 /** ANIMATIONS */
-
-@keyframes moveRight {
-    0% {
-        left: 0px;
-    }
-
-    100% {
-        left: 108px;
-    }
-}
-
-@keyframes moveLeft {
-    0% {
-        right: 0px;
-    }
-
-    100% {
-        right: 108px;
-    }
-}
